// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots for Bedford 1`] = `
<div
  className="StudentPhotoCropped"
  style={
    {
      "backgroundColor": "#ddd",
      "backgroundImage": "url(/students/42/photo)",
      "backgroundPosition": "center top",
      "backgroundPositionY": -5,
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "130%",
      "border": "1px solid #ddd",
      "borderRadius": 3,
      "height": 58,
      "marginRight": 10,
      "overflow": "hidden",
      "width": 58,
    }
  }
/>
`;

exports[`snapshots for New Bedford 1`] = `
<div
  className="StudentPhotoCropped"
  style={
    {
      "backgroundColor": "#ddd",
      "backgroundImage": "url(/students/42/photo)",
      "backgroundPosition": "center top",
      "backgroundPositionY": -10,
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "110%",
      "border": "1px solid #ddd",
      "borderRadius": 3,
      "height": 58,
      "marginRight": 10,
      "overflow": "hidden",
      "width": 58,
    }
  }
/>
`;

exports[`snapshots for Somerville 1`] = `
<div
  className="StudentPhotoCropped"
  style={
    {
      "backgroundColor": "#ddd",
      "backgroundImage": "url(/students/42/photo)",
      "backgroundPosition": "center top",
      "backgroundPositionY": -10,
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "150%",
      "border": "1px solid #ddd",
      "borderRadius": 3,
      "height": 58,
      "marginRight": 10,
      "overflow": "hidden",
      "width": 58,
    }
  }
/>
`;

exports[`snapshots for demo 1`] = `
<div
  className="StudentPhotoCropped"
  style={
    {
      "backgroundColor": "#ddd",
      "backgroundImage": "url(/students/42/photo)",
      "backgroundPosition": "center top",
      "backgroundPositionY": -5,
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "130%",
      "border": "1px solid #ddd",
      "borderRadius": 3,
      "height": 58,
      "marginRight": 10,
      "overflow": "hidden",
      "width": 58,
    }
  }
/>
`;
